<resources>
    <string name="app_name">MarkStone</string>
    <string name="logo">MARKSTONE</string>
    <string name="title_activity_user">UserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">Личный кабинет</string>
    <string name="sale">Скидки</string>
    <string name="catalog">Каталог</string>
    <string name="cart">Корзина</string>
    <string name="delivery_first">Мы осуществляем доставку транспортной компанией СДЭК по всей России.</string>
    <string name="delivery_second">При оформлении заказа с доставкой в Ваш город с Вами свяжется менеджер для уточнения деталей доставки, Вашей посылки будет присвоен индивидуальный номер по которому Вы сможете отследить местоположение посылки и путь ее передвижения. Получить заказ можно как в пункте выдачи компании СДЭК, так и оформить доставку курьером лично Вам в руки.</string>
    <string name="delivery_3">Оплатить посылку при оформлении доставки транспортной компанией СДЭК можно как при получении посылки (+10% к стоимости заказа и доставки), так и перед ее отправкой.</string>
    <string name="delivery_title_2">Доставка по Вашему городу:</string>
    <string name="delivery_4">Если Вы находитесь в городе: Ростов-на-Дону, Батайск, Ставрополь можно оформить доставку до двери, стоимость доставки 200р, если Ваш заказ превышает 1000р, то доставка в указанных городах для Вас будет БЕСПЛАТНОЙ.</string>
    <string name="delivery_5">Оплатить заказ при оформлении доставки по городу можно как перед доставкой, так и при получении Вашего заказа.</string>

    <string name="exchange_title_1">Условия обмена и возврата</string>
    <string name="exchange_1">Правила обмена и возврата товара.</string>
    <string name="exchange_2">Согласно ст. 25 Закона «О защите прав потребителей», вы можете вернуть или обменять товар надлежащего качества, приобретённый в розничном магазине, в течение 14 дней, не считая дня покупки.</string>
    <string name="exchange_3">Согласно ст. 26.1 Закона «О защите прав потребителей», вы вправе вернуть любой товар, приобретённый в интернет-магазине, в течение семи дней после получения товара без указания причин возврата.</string>
    <string name="exchange_4">Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид, потребительские свойства, а также документ, подтверждающий факт и условия покупки указанного товара. Отсутствие у потребителя документа, подтверждающего факт и условия покупки товара, не лишает его возможности ссылаться на другие доказательства приобретения товара у данного продавца.</string>
    <string name="exchange_5">Потребитель не вправе отказаться от товара надлежащего качества, имеющего индивидуально-определенные свойства, если указанный товар может быть использован исключительно приобретающим его потребителем (прим.: если товар изготовлен на заказ).</string>
    <string name="exchange_6">При отказе потребителя от товара продавец должен возвратить ему денежную сумму, уплаченную потребителем по договору, за исключением расходов продавца на доставку от потребителя возвращенного товара, не позднее чем через десять дней со дня предъявления потребителем соответствующего требования.</string>
    <string name="exchange_7">Срок возврата товара надлежащего качества составляет 30 дней с момента получения товара.</string>
    <string name="exchange_8">Возврат переведённых средств, производится на ваш банковский счёт в течение 5-30 рабочих дней (срок зависит от банка, который выдал вашу банковскую карту).</string>
    <string name="exchange_9">Ювелирные украшения согласно Постановлению Правительства РФ № 55 от 19 января 1998 г входят в перечень непродовольственных товаров надлежащего качества, которые не подлежат возврату или обмену. Иными словами: обмен или возврат возможен только при условии, что приобретённое украшение имеет заводской брак или образовалась поломка по причине, не зависящей от покупателя. Произвести возврат или обмен возможно только в течение действия гарантийного срока.</string>

</resources>