<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.users.DeliveryFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="24sp"
                >
                <ImageView
                    android:id="@+id/back_devivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:adjustViewBounds="true"
                    android:maxHeight="30dp"
                    android:maxWidth="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_custom_back" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Доставка"
                    android:textColor="#425060"
                    android:fontFamily="@font/avenir_next_cur"
                    android:textFontWeight="800"
                    android:textSize="24sp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_next_cur"
                android:text="@string/delivery_first"
                android:textColor="#425060"
                android:textFontWeight="600"
                android:textSize="18sp"
                android:layout_marginBottom="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_second"
                android:fontFamily="@font/avenir_next_cur"
                android:textColor="#425060"
                android:textFontWeight="400"
                android:textSize="18sp"
                android:layout_marginBottom="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_3"
                android:fontFamily="@font/avenir_next_cur"
                android:textColor="#425060"
                android:textFontWeight="400"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_title_2"
                android:textColor="#425060"
                android:textFontWeight="600"
                android:fontFamily="@font/avenir_next_cur"
                android:textSize="18sp"
                android:layout_marginBottom="30sp"
                android:layout_marginTop="40sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_4"
                android:fontFamily="@font/avenir_next_cur"
                android:textColor="#425060"
                android:textFontWeight="400"
                android:textSize="18sp"
                android:layout_marginBottom="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_4"
                android:fontFamily="@font/avenir_next_cur"
                android:textColor="#425060"
                android:textFontWeight="400"
                android:textSize="18sp"
                />
        </LinearLayout>
    </ScrollView>
</FrameLayout>